force-app/main/default/objects/Meeting__c/fields/Intent_Score_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_Snapshot__c</fullName>
    <description>Snapshot value of the Contact Intent Score, when the Meeting was created.
MIS-4254</description>
    <label>Intent Score Snapshot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>