force-app/main/default/objects/Meeting__c/fields/Lead_Company_for_MIR_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Company_for_MIR_Email__c</fullName>
    <label>Lead Company for MIR Email</label>
    <type>TextArea</type>
</CustomField>