force-app/main/default/objects/Meeting__c/fields/Locked_Feature_On_Demand__c.field-meta.xml
<CustomField>
    <fullName>Locked_Feature_On_Demand__c</fullName>
    <description>MIS-4833</description>
    <label>Locked Feature On Demand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>App Analysis</fullName>
            </value>
            <value>
                <fullName>Audience</fullName>
            </value>
            <value>
                <fullName>Brand Protection</fullName>
            </value>
            <value>
                <fullName>Conversion Rate</fullName>
            </value>
            <value>
                <fullName>Country Filters</fullName>
            </value>
            <value>
                <fullName>Custom Industry</fullName>
            </value>
            <value>
                <fullName>Folder</fullName>
            </value>
            <value>
                <fullName>Historical Data</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>More Results</fullName>
            </value>
            <value>
                <fullName>More Users</fullName>
            </value>
            <value>
                <fullName>Popular Pages</fullName>
            </value>
            <value>
                <fullName>Rank Tracker</fullName>
            </value>
            <value>
                <fullName>Segment</fullName>
            </value>
            <value>
                <fullName>Subdomains</fullName>
            </value>
            <value>
                <fullName>Website Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>