force-app/main/default/objects/Meeting__c/fields/Main_Topics_Covered__c.field-meta.xml
<CustomField>
    <fullName>Main_Topics_Covered__c</fullName>
    <label>Main Topics Covered</label>
    <type>TextArea</type>
</CustomField>