force-app/main/default/objects/Meeting__c/fields/Managers_Email__c.field-meta.xml
<CustomField>
    <fullName>Managers_Email__c</fullName>
    <label>Owner Manager Email</label>
    <type>Email</type>
</CustomField>