force-app/main/default/objects/Meeting__c/fields/Maturity_Rank__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Rank__c</fullName>
    <formula>Account__r.Maturity_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Rank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>