force-app/main/default/objects/Meeting__c/fields/Meeting_Division__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Division__c</fullName>
    <description>MIS-4071</description>
    <label>Meeting Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agencies Strategic - CSM</fullName>
            </value>
            <value>
                <fullName>Agencies Strategic - Sales</fullName>
            </value>
            <value>
                <fullName>APAC China Hybrid - CSM</fullName>
            </value>
            <value>
                <fullName>APAC China Hybrid - Sales</fullName>
            </value>
            <value>
                <fullName>APAC Inside Sales Hybrid - CSM</fullName>
            </value>
            <value>
                <fullName>APAC Inside Sales Hybrid - Sales</fullName>
            </value>
            <value>
                <fullName>APAC Strategic - CSM</fullName>
            </value>
            <value>
                <fullName>APAC Strategic - Sales</fullName>
            </value>
            <value>
                <fullName>Channel Sales</fullName>
            </value>
            <value>
                <fullName>Dach - CSM</fullName>
            </value>
            <value>
                <fullName>Dach - Sales</fullName>
            </value>
            <value>
                <fullName>Dach - SDR</fullName>
            </value>
            <value>
                <fullName>UK - CSM</fullName>
            </value>
            <value>
                <fullName>UK - Sales</fullName>
            </value>
            <value>
                <fullName>EMEA Inside Sales - CSM</fullName>
            </value>
            <value>
                <fullName>EMEA Inside Sales - Sales</fullName>
            </value>
            <value>
                <fullName>France - CSM</fullName>
            </value>
            <value>
                <fullName>France - Sales</fullName>
            </value>
            <value>
                <fullName>Investors Enterprise - CSM</fullName>
            </value>
            <value>
                <fullName>Investors Enterprise - Sales</fullName>
            </value>
            <value>
                <fullName>Investors SMB - CSM</fullName>
            </value>
            <value>
                <fullName>Investors SMB - Sales</fullName>
            </value>
            <value>
                <fullName>Investors Strategic - CSM</fullName>
            </value>
            <value>
                <fullName>Investors Strategic - Sales</fullName>
            </value>
            <value>
                <fullName>Japan - CSM</fullName>
            </value>
            <value>
                <fullName>Japan - Sales</fullName>
            </value>
            <value>
                <fullName>LATAM Inside Sales - CSM</fullName>
            </value>
            <value>
                <fullName>LATAM Inside Sales - Sales</fullName>
            </value>
            <value>
                <fullName>Low Touch</fullName>
            </value>
            <value>
                <fullName>NA Enterprise - CSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>