force-app/main/default/objects/Meeting__c/fields/Meeting_Division_Updated_Manually__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Division_Updated_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-4071: True when the field &apos;Meeting Division&apos; is updated manually via UI.
When True, Meeting Division will not be updated anymore by any automation.</description>
    <label>Meeting Division Updated Manually</label>
    <type>Checkbox</type>
</CustomField>