force-app/main/default/objects/Meeting__c/fields/Meeting_Name__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Name__c</fullName>
    <formula>&quot;Date: &quot;+TEXT( Date__c )+ BR()+ 
&quot; &quot;+&quot;Meeting #: &quot;+Name +BR()+ 
&quot; &quot;+&quot;Type: &quot;+ RecordType.Name+BR()+
&quot;SDR Name: &quot;+ SDR_Name__c +BR()+
&quot;Owner Name: &quot;+  Owner:User.FirstName +&quot; &quot;+ Owner:User.LastName +BR()</formula>
    <label>Meeting Name</label>
    <type>Text</type>
</CustomField>