force-app/main/default/objects/Meeting__c/fields/Meeting_Score__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Score__c</fullName>
    <description>MIS-4188</description>
    <label>Meeting Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>