force-app/main/default/objects/Meeting__c/fields/Meeting_Source__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Source__c</fullName>
    <inlineHelpText>Proactive - Website Chat is instead of Proactive - Qualified Hunt</inlineHelpText>
    <label>Meeting Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AM cross-sell</fullName>
            </value>
            <value>
                <fullName>Handraise - Calendar Automation</fullName>
            </value>
            <value>
                <fullName>Handraise - Chat</fullName>
            </value>
            <value>
                <fullName>Handraise - Client referral</fullName>
            </value>
            <value>
                <fullName>Handraise - Contact Us</fullName>
            </value>
            <value>
                <fullName>Handraise - Email Reply to Automation</fullName>
            </value>
            <value>
                <fullName>Handraise - New User registration</fullName>
            </value>
            <value>
                <fullName>Outbound NAL/STRAT - Call</fullName>
            </value>
            <value>
                <fullName>Outbound NAL/STRAT - Email</fullName>
            </value>
            <value>
                <fullName>Partnership - Referral</fullName>
            </value>
            <value>
                <fullName>Proactive - Call</fullName>
            </value>
            <value>
                <fullName>Proactive - Churn Revival</fullName>
            </value>
            <value>
                <fullName>Proactive - Closed Lost Revival</fullName>
            </value>
            <value>
                <fullName>Proactive - Email</fullName>
            </value>
            <value>
                <fullName>Proactive - Employee relationship</fullName>
            </value>
            <value>
                <fullName>Proactive - LinkedIn Message</fullName>
            </value>
            <value>
                <fullName>Proactive - NT2T pool</fullName>
            </value>
            <value>
                <fullName>Proactive - Post Marketing Event</fullName>
            </value>
            <value>
                <fullName>Proactive - Referral Conversation</fullName>
            </value>
            <value>
                <fullName>Proactive - Website Chat</fullName>
            </value>
            <value>
                <fullName>Reach out to online prospect (Proactive outreach)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>