force-app/main/default/objects/Meeting__c/fields/Meeting_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Sub_Type__c</fullName>
    <label>Meeting Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Conference Meeting</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Company Event</fullName>
            </value>
            <value>
                <fullName>Chat Handover</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Quarterly Business Review</fullName>
            </value>
            <value>
                <fullName>Partner Event</fullName>
            </value>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>Qualification / Discovery Call</fullName>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
            <value>
                <fullName>Regular check-in</fullName>
            </value>
            <value>
                <fullName>New product/upsell meeting</fullName>
            </value>
            <value>
                <fullName>Intro meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>