force-app/main/default/objects/Meeting__c/fields/Meeting_Summary_and_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Summary_and_Next_Steps__c</fullName>
    <label>Feedback to SDR:</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>