force-app/main/default/objects/Meeting__c/fields/MIR_Handover_Flow__c.field-meta.xml
<CustomField>
    <fullName>MIR_Handover_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>help field for validation &quot;MIR Handover Creation&quot;</description>
    <label>MIR Handover Flow</label>
    <type>Checkbox</type>
</CustomField>