force-app/main/default/objects/Meeting__c/fields/MQL_Status_at_Meeting_Creation__c.field-meta.xml
<CustomField>
    <fullName>MQL_Status_at_Meeting_Creation__c</fullName>
    <description>MIS-5826</description>
    <label>MQL Status - at Meeting Creation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>