force-app/main/default/objects/Meeting__c/fields/Multithread_By__c.field-meta.xml
<CustomField>
    <fullName>Multithread_By__c</fullName>
    <label>Multithread By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>SM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>