force-app/main/default/objects/Meeting__c/fields/Multithread_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Multithread_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-6407
multithreading refers to the strategy of building relationships and engaging with multiple stakeholders or decision-makers within a single account or organization.</description>
    <label>Multithread Meeting</label>
    <type>Checkbox</type>
</CustomField>