force-app/main/default/objects/Meeting__c/fields/Need_Value__c.field-meta.xml
<CustomField>
    <fullName>Need_Value__c</fullName>
    <label>What pain are we solving?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>