force-app/main/default/objects/Meeting__c/fields/Next_steps__c.field-meta.xml
<CustomField>
    <fullName>Next_steps__c</fullName>
    <label>Next steps</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>