force-app/main/default/objects/Meeting__c/fields/NT2T_Meeting__c.field-meta.xml
<CustomField>
    <fullName>NT2T_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NT2T Meeting</label>
    <type>Checkbox</type>
</CustomField>