force-app/main/default/objects/Meeting__c/fields/NT_Meeting__c.field-meta.xml
<CustomField>
    <fullName>NT_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NT Meeting</label>
    <type>Checkbox</type>
</CustomField>