force-app/main/default/objects/Meeting__c/fields/Number_of_ActionItems__c.field-meta.xml
<CustomField>
    <fullName>Number_of_ActionItems__c</fullName>
    <label># of ActionItems</label>
    <summaryForeignKey>Action_Item__c.Meeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>