force-app/main/default/objects/Meeting__c/fields/Original_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Source__c</fullName>
    <formula>TEXT(Contact_Related_To__r.Original_Lead_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Lead Source</label>
    <type>Text</type>
</CustomField>