force-app/main/default/objects/Meeting__c/fields/Other_Participants__c.field-meta.xml
<CustomField>
    <fullName>Other_Participants__c</fullName>
    <label>Other Participants Old</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>