force-app/main/default/objects/Meeting__c/fields/OtherParticipants__c.field-meta.xml
<CustomField>
    <fullName>OtherParticipants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Participants</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meetings (Other Participants)</relationshipLabel>
    <relationshipName>Meetings2</relationshipName>
    <type>Lookup</type>
</CustomField>