force-app/main/default/objects/Meeting__c/fields/Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Full_Name__c</fullName>
    <description>MIS-3342</description>
    <formula>Owner:User.FirstName+&quot; &quot;+ Owner:User.LastName</formula>
    <label>Owner Full Name</label>
    <type>Text</type>
</CustomField>