force-app/main/default/objects/Meeting__c/fields/Owner_Sub_motion__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sub_motion__c</fullName>
    <formula>Owner:User.Sub_Motion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Sub-motion</label>
    <type>Text</type>
</CustomField>