force-app/main/default/objects/Meeting__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <description>MIS-988</description>
    <formula>Contact_Related_To__r.Partner_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Account</label>
    <type>Text</type>
</CustomField>