force-app/main/default/objects/Meeting__c/fields/Positive_Business_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Positive_Business_Outcome__c</fullName>
    <label>What are the Positive Business Outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>