force-app/main/default/objects/Meeting__c/fields/Post_Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Post_Meeting_Notes__c</fullName>
    <label>Post Meeting Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>