force-app/main/default/objects/Meeting__c/fields/Previous_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner_Name__c</fullName>
    <description>MIS-2958
shows the name of the previous owner of the meeting, updates when the owner is changed or created</description>
    <label>Previous Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>