force-app/main/default/objects/Meeting__c/fields/Product_Sold__c.field-meta.xml
<CustomField>
    <fullName>Product_Sold__c</fullName>
    <description>MIS-1509</description>
    <label>Product Sold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Sold</valueSetName>
    </valueSet>
</CustomField>