force-app/main/default/objects/Meeting__c/fields/Products_they_use_today__c.field-meta.xml
<CustomField>
    <fullName>Products_they_use_today__c</fullName>
    <label>Products they use today?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>