force-app/main/default/objects/Meeting__c/fields/Prospect_Gap__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Gap__c</fullName>
    <description>MIS-6753</description>
    <inlineHelpText>Main gap from the meeting summary</inlineHelpText>
    <label>Prospect Gap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>