force-app/main/default/objects/Meeting__c/fields/Prospect_s_Entity_and_team__c.field-meta.xml
<CustomField>
    <fullName>Prospect_s_Entity_and_team__c</fullName>
    <description>MIS-1682</description>
    <label>Prospect’s Entity and team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>