force-app/main/default/objects/Meeting__c/fields/Purchase_Process__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Process__c</fullName>
    <inlineHelpText>What is the internal process?
Example: Decision Maker is Sam Samson, VP of Marketing. Process: SEO manager vets tools, VP of Marketing allocates budget and decides on purchase, legal reviews contract, finance signs final contract</inlineHelpText>
    <label>Who is the decision maker?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>