force-app/main/default/objects/Meeting__c/fields/Purchase_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Timeframe__c</fullName>
    <inlineHelpText>Example: They are looking to buy right away and will be using leftover budget from last Quarter</inlineHelpText>
    <label>What is their purchase timeframe?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>