force-app/main/default/objects/Meeting__c/fields/Reason_why_this_isn_t_ready_to_be_an_Opp__c.field-meta.xml
<CustomField>
    <fullName>Reason_why_this_isn_t_ready_to_be_an_Opp__c</fullName>
    <label>Reason why this isn&apos;t ready to be an Opp</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>