force-app/main/default/objects/Meeting__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <description>MIS-2700</description>
    <label>Rank Ranger POC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Joel Janovsky</fullName>
            </value>
            <value>
                <fullName>Tzvi Barish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>