force-app/main/default/objects/Meeting__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Related_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>