force-app/main/default/objects/Meeting__c/fields/Relevant_Features__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Features__c</fullName>
    <inlineHelpText>Please describe the Similarweb features that are most relevant for this customer.</inlineHelpText>
    <label>Relevant Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API (Dashboard)</fullName>
            </value>
            <value>
                <fullName>API (Traditional)</fullName>
            </value>
            <value>
                <fullName>App Analysis</fullName>
            </value>
            <value>
                <fullName>App Category Analysis</fullName>
            </value>
            <value>
                <fullName>App Engagement</fullName>
            </value>
            <value>
                <fullName>Country Filters</fullName>
            </value>
            <value>
                <fullName>Custom Dashboards</fullName>
            </value>
            <value>
                <fullName>Desktop vs. Mobile</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Engagement Stats</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Google Play Keywords</fullName>
            </value>
            <value>
                <fullName>Industry Analysis</fullName>
            </value>
            <value>
                <fullName>Keyword Competitors</fullName>
            </value>
            <value>
                <fullName>Mobile Web Referrals</fullName>
            </value>
            <value>
                <fullName>Outgoing Links/Ads</fullName>
            </value>
            <value>
                <fullName>Popular Pages</fullName>
            </value>
            <value>
                <fullName>Referrals</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Similar Sites</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Top Sites</fullName>
            </value>
            <value>
                <fullName>Traffic Overview</fullName>
            </value>
            <value>
                <fullName>Traffic Source Breakdown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>