force-app/main/default/objects/Meeting__c/fields/Response_Status_CP__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_CP__c</fullName>
    <label>Response Status CP</label>
    <type>TextArea</type>
</CustomField>